--- a/ShradhaBookStore/Views/User/Shop.cshtml
+++ b/ShradhaBookStore/Views/User/Shop.cshtml
@@ -4,25 +4,284 @@
 *@
 @{
     Layout = "_LayoutGuest";
-}
-<div class="container my-5">
+} <!-- Start Content -->
+<div class="container py-5">
+    <div class="row">
 
-<div class="row my-5">
-    @foreach(var item in Model.Products)
-    {
-        
-    <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <img src="~/Images//Products/@item.Image" class="card-img-top" style="height:200px;" alt="...">
-                <div class="card-body">
-                    <h3 class="car-title">@item.Name</h3>
-                    <p class="card-text">Category: @item.Category.Name</p>
-                    <p class="card-text">Acronym: @item.Acronym</p>
-                    <p class="card-text">@item.Description</p>
+        <div class="col-lg-3">
+            <h1 class="h2 pb-4">Categories</h1>
+            <ul class="list-unstyled templatemo-accordion">
+                @foreach (var category in Model.Categories.Where(c => c.ParentCategoryId == null))
+                {
+                    <li class="pb-3">
+                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
+                            @category.Name
+                            <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
+                        </a>
+                        <ul class="collapse show list-unstyled pl-3">
+                            @foreach (var subCategory in category.InverseParentCategory)
+                            {
+                                <li><a class="text-decoration-none" href="#">@subCategory.Name</a></li>
+                            }
+                        </ul>
+                    </li>
+                }
+                <li class="pb-3">
+                    <a class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
+                        Manufacturer
+                        <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
+                    </a>
+                    <ul id="collapseTwo" class="collapse list-unstyled pl-3">
+                        @foreach (var Manu in Model.Manufacturers)
+                        {
+                            <li><a class="text-decoration-none" href="#">@Manu.Name</a></li>
+                        }
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
+
+        <div class="col-lg-9">
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="list-inline shop-top-menu pb-3 pt-1">
+                        <li class="list-inline-item">
+                            <a class="h3 text-dark text-decoration-none mr-3" href="#">All</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="h3 text-dark text-decoration-none mr-3" href="#">Men's</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="h3 text-dark text-decoration-none" href="#">Women's</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6 pb-4">
+                    <div class="d-flex">
+                        <select class="form-control">
+                            <option>Featured</option>
+                            <option>A to Z</option>
+                            <option>Item</option>
+                        </select>
+                    </div>
                 </div>
             </div>
-    </div>
-    }
-</div>
+            <div class="row">
+                @foreach (var product in Model.Products)
+                {
+                    <div class="col-md-4">
+       
+                            <div class="card mb-4 product-wap rounded-0">
+                                <div class="card rounded-0">
+                                    <img class="card-img rounded-0 img-fluid" src="~/Images/Products/@product.Image">
+                                    <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
+                                        <ul class="list-unstyled">
+                                            <li><a class="btn btn-success text-white" asp-action="Product_info" asp-route-product="@product.Id" asp-action="Add_to_Wishlist"><i class="far fa-heart"></i></a></li>
+                                            <li><a class="btn btn-success text-white mt-2" asp-action="Product_info" asp-route-id="@product.Id"><i class="far fa-eye"></i></a></li>
+                                            <li><a class="btn btn-success text-white mt-2" asp-action="Add_to_Cart" asp-route-productid="@product.Id"><i class="fas fa-cart-plus"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                <a asp-action="Product_info" asp-route-id="@product.Id" class="h3 text-decoration-none">@product.Name</a>
+                                    <!-- Display first review stars -->
+                                    <ul class="list-unstyled d-flex justify-content-center mb-1">
+                                        <li>
+                                            @{
+                                                var gold = Model.FirstReviewStars.ContainsKey(product.Id) ? Model.FirstReviewStars[product.Id] : 0;
+                                            }
+                                            @for (int s = 0; s < gold; s++)
+                                            {
+                                                <i class="text-warning fa fa-star"></i>
+                                            }
+                                            @{
+                                                var white = 5 - gold;
+                                            }
+                                            @for (int s = 0; s < white; s++)
+                                            {
+                                                <i class="text-muted fa fa-star"></i>
+                                            }
+                                        </li>
+                                    </ul>
 
+                                    <!-- Display review count -->
+                                    <p>Reviews: @(Model.ReviewCounts.ContainsKey(product.Id) ? Model.ReviewCounts[product.Id].ToString() : "0")</p>
+
+                                    <!-- Your other product details here -->
+                                    <ul class="w-100 list-unstyled mb-0">
+                                        <li>Acronyms: @product.Acronym</li>
+                                        <li >
+                                            Category : @product.Category.Name
+                                        </li>
+                                    </ul>
+                                    <p class="text-center mb-0">$@product.Price</p>
+                                </div>
+                            </div>
+                 
+                    </div>
+                }
+
+               @*  @foreach (var item in Model.Products)
+                {
+
+                    <div class="col-md-4">
+                        <a asp-action="Product_info" asp-route-id="@item.Id">
+
+                            <div class="card mb-4 product-wap rounded-0">
+                                <div class="card rounded-0">
+                                    <img class="card-img rounded-0 img-fluid" src="~/Images/Products/@item.Image">
+                                    <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
+                                        <ul class="list-unstyled">
+                                            <li><a class="btn btn-success text-white" asp-action="Product_info" asp-route-product="@item.Id" asp-action="Add_to_Wishlist"><i class="far fa-heart"></i></a></li>
+                                            <li><a class="btn btn-success text-white mt-2" asp-action="Product_info" asp-route-id="@item.Id"><i class="far fa-eye"></i></a></li>
+                                            <li><a class="btn btn-success text-white mt-2" asp-action="Add_to_Cart" asp-route-productid="@item.Id"><i class="fas fa-cart-plus"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <a href="shop-single.html" class="h3 text-decoration-none">Oupidatat non</a>
+                                    <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
+                                        <li>M/L/X/XL</li>
+                                        <li class="pt-2">
+                                            <span class="product-color-dot color-dot-red float-left rounded-circle ml-1"></span>
+                                            <span class="product-color-dot color-dot-blue float-left rounded-circle ml-1"></span>
+                                            <span class="product-color-dot color-dot-black float-left rounded-circle ml-1"></span>
+                                            <span class="product-color-dot color-dot-light float-left rounded-circle ml-1"></span>
+                                            <span class="product-color-dot color-dot-green float-left rounded-circle ml-1"></span>
+                                        </li>
+                                    </ul>
+                                    <ul class="list-unstyled d-flex justify-content-center mb-1">
+                                        <li>
+                                            <i class="text-warning fa fa-star"></i>
+                                            <i class="text-warning fa fa-star"></i>
+                                            <i class="text-warning fa fa-star"></i>
+                                            <i class="text-muted fa fa-star"></i>
+                                            <i class="text-muted fa fa-star"></i>
+                                        </li>
+                                    </ul>
+                                    <p class="text-center mb-0">$250.00</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                }
+ *@
+            </div>
+            <div div="row">
+                <ul class="pagination pagination-lg justify-content-end">
+                    <li class="page-item disabled">
+                        <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0" href="#" tabindex="-1">1</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark" href="#">2</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link rounded-0 shadow-sm border-top-0 border-left-0 text-dark" href="#">3</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
 </div>
+<!-- End Content -->
+<!-- Start Brands -->
+<section class="bg-light py-5">
+    <div class="container my-4">
+        <div class="row text-center py-3">
+            <div class="col-lg-6 m-auto">
+                <h1 class="h1">Our Brands</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+            <div class="col-lg-9 m-auto tempaltemo-carousel">
+                <div class="row d-flex flex-row">
+                    <!--Controls-->
+                    <div class="col-1 align-self-center">
+                        <a class="h1" href="#multi-item-example" role="button" data-bs-slide="prev">
+                            <i class="text-light fas fa-chevron-left"></i>
+                        </a>
+                    </div>
+                    <!--End Controls-->
+                    <!--Carousel Wrapper-->
+                    <div class="col">
+                        <div class="carousel slide carousel-multi-item pt-2 pt-md-0" id="multi-item-example" data-bs-ride="carousel">
+                            <!--Slides-->
+                            <div class="carousel-inner product-links-wap" role="listbox">
+
+                                <!--First slide-->
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_01.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_02.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_03.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_04.png" alt="Brand Logo"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--End First slide-->
+                                <!--Second slide-->
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_01.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_02.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_03.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_04.png" alt="Brand Logo"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--End Second slide-->
+                                <!--Third slide-->
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_01.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_02.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_03.png" alt="Brand Logo"></a>
+                                        </div>
+                                        <div class="col-3 p-md-5">
+                                            <a href="#"><img class="img-fluid brand-img" src="assets/img/brand_04.png" alt="Brand Logo"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--End Third slide-->
+
+                            </div>
+                            <!--End Slides-->
+                        </div>
+                    </div>
+                    <!--End Carousel Wrapper-->
+                    <!--Controls-->
+                    <div class="col-1 align-self-center">
+                        <a class="h1" href="#multi-item-example" role="button" data-bs-slide="next">
+                            <i class="text-light fas fa-chevron-right"></i>
+                        </a>
+                    </div>
+                    <!--End Controls-->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--End Brands-->
