--- a/ShradhaBookStore/Views/Admin/Show_Users.cshtml
+++ b/ShradhaBookStore/Views/Admin/Show_Users.cshtml
@@ -1,11 +1,16 @@
 ﻿@model IEnumerable<ShradhaBookStore.Models.User>
-
+@{
+    Layout = "_LayoutAdmin";
+}
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Username)
             </th>
@@ -31,6 +36,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Username)
             </td>
             <td>
@@ -51,8 +59,8 @@
                     }
 
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
+            <td class="w-25">
+                    <img src="~/Images/Users/@Html.DisplayFor(modelItem => item.Image)" style="border-radius:100%;" class="w-75 mx-auto img-fluid" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
